filter by blogPost

--- a/src/pages/en/guides/cms/storyblok.mdx
+++ b/src/pages/en/guides/cms/storyblok.mdx
@@ -394,9 +394,9 @@ To dynamically render all of the blog posts, create a dynamic route. This approa
 
 If you are using Astro's default static site generation, you will use [dynamic routes](/en/core-concepts/routing/#dynamic-routes) and the `getStaticPaths` function to generate your project pages.
 
-Create a new file in the `src/pages` directory called `[...slug].astro` and add the following code:
+Create a new file in a `src/pages/blog` directory called `[...slug].astro` and add the following code:
 
-```astro title="src/pages/[...slug].astro"
+```astro title="src/pages/blog/[...slug].astro"
 ---
 import { useStoryblokApi } from '@storyblok/astro'
 import StoryblokComponent from '@storyblok/astro/StoryblokComponent.astro'
@@ -404,15 +404,16 @@ import StoryblokComponent from '@storyblok/astro/StoryblokComponent.astro'
 export async function getStaticPaths() {
   const sbApi = useStoryblokApi();
 
-  const { data } = await sbApi.get("cdn/links", {
+  const { data } = await sbApi.get("cdn/stories", {
+    content_type: "blogPost"
     version: import.meta.env.DEV ? "draft" : "published",
   });
 
-  const links = Object.values(data.links);
+  const stories = Object.values(data.stories);
 
-  return links.map((link) => {
+  return stories.map((story) => {
     return {
-      params: { slug: link.slug },
+      params: { slug: story.slug },
     };
   });
 }
