--- a/src/pages/en/guides/cms/storyblok.mdx
+++ b/src/pages/en/guides/cms/storyblok.mdx
@@ -405,7 +405,7 @@ export async function getStaticPaths() {
   const sbApi = useStoryblokApi();
 
   const { data } = await sbApi.get("cdn/stories", {
-    content_type: "blogPost"
+    content_type: "blogPost",
     version: import.meta.env.DEV ? "draft" : "published",
   });
 
@@ -443,12 +443,12 @@ This file will generate a page for each story, with the slug and content fetched
 
 If you’ve [opted into SSR mode](/en/guides/server-side-rendering/#enabling-ssr-in-your-project), you will use dynamic routes to fetch the page data from Storyblok.
 
-```astro title="src/pages/[...slug].astro"
+```astro title="src/pages/blog/[...slug].astro"
 ---
 import { useStoryblokApi } from '@storyblok/astro'
 import StoryblokComponent from '@storyblok/astro/StoryblokComponent.astro'
 const storyblokApi = useStoryblokApi()
-const slug = Astro.params.slug === undefined ? "home" : Astro.params.slug
+const slug = Astro.params.slug;
 let content;
 try {
   const { data } = await storyblokApi.get(`cdn/stories/${slug}`, {
