--- a/src/pages/es/reference/errors/content-schema-contains-slug-error.mdx
+++ b/src/pages/es/reference/errors/content-schema-contains-slug-error.mdx
@@ -10,9 +10,8 @@ i18nReady: true
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
 ---
 
-> **ContentSchemaContainsSlugError**: 
-            return `Un esquema de colección de contenido no debe contener el `slug` ya que esta reservado para la generación de slugs. Elimine esto de su esquema de colección de contenido.`;
-         (E09003)
+Un esquema de colección de contenido no debe contener el `slug` ya que está reservado para la generación de slugs. Elimina esto de tu esquema de colección de contenido.
+(E09003)
 
 ## ¿Qué salió mal?
 Un esquema de colección de contenido no debe contener la propiedad `slug`. Esto está reservado por Astro para generar slugs. Elimine el campo `slug` de su esquema o elija un nombre diferente.
