--- a/src/pages/en/reference/api-reference.mdx
+++ b/src/pages/en/reference/api-reference.mdx
@@ -200,7 +200,7 @@ Astro.response.headers.set('Set-Cookie', 'a=b; Path=/;');
 
 <Since v="1.4.0" />
 
-`Astro.cookies` contains utilities for reading and manipulating cookies.
+`Astro.cookies` contains utilities for reading and manipulating cookies in [Server-side Rendering](/en/guides/server-side-rendering/) mode.
 
 | Name           | Type                                              | Description                                        |
 | :------------- | :------------------------------------------------ | :------------------------------------------------- |
@@ -222,6 +222,22 @@ Getting a cookie via `Astro.cookies.get()` returns a `AstroCookie` type. It has 
 | `number`       | `() => number` | Parses the cookie value as a Number. Returns NaN if not a valid number.   |
 | `boolean`       | `() => boolean` | Converts the cookie value to a boolean.   |
 
+### Astro.redirect
+In [Server-side Rendering](/en/guides/server-side-rendering/), `Astro.redirect` allows you to redirect to another page. 
+A page (and not a child component) must `return` the result of `Astro.redirect` for the redirect to occur.
+
+```astro title="src/pages/account.astro" {8}
+---
+import { isLoggedIn } from '../utils';
+
+const cookie = Astro.request.headers.get('cookie');
+
+// If the user is not logged in, redirect them to the login page
+if (!isLoggedIn(cookie)) {
+  return Astro.redirect('/login');
+}
+---
+```
 
 ### `Astro.canonicalURL`
 
