--- a/src/pages/en/reference/api-reference.mdx
+++ b/src/pages/en/reference/api-reference.mdx
@@ -222,7 +222,7 @@ Getting a cookie via `Astro.cookies.get()` returns a `AstroCookie` type. It has 
 | `number`       | `() => number` | Parses the cookie value as a Number. Returns NaN if not a valid number.   |
 | `boolean`       | `() => boolean` | Converts the cookie value to a boolean.   |
 
-### Astro.redirect()
+### `Astro.redirect()`
 In [Server-side Rendering](/en/guides/server-side-rendering/), `Astro.redirect()` allows you to redirect to another page. 
 A page (and not a child component) must `return` the result of `Astro.redirect()` for the redirect to occur.
 
