client directive component must be imported disclaimer

--- a/src/pages/en/reference/directives-reference.mdx
+++ b/src/pages/en/reference/directives-reference.mdx
@@ -97,6 +97,8 @@ These directives control how [UI Framework components](/en/core-concepts/framewo
 
 By default, a UI Framework component is not hydrated in the client. If no `client:*` directive is provided, its HTML is rendered onto the page without JavaScript.
 
+A client directive must be placed on an imported component (i.e., not a [dynamic](/en/core-concepts/astro-components/#dynamic-tags) or [passed](/en/guides/markdown-content/#custom-components-with-imported-mdx) component).
+
 ### `client:load`
 
 - **Priority:** High
