i18n(pt-BR): Add `sst.mdx` translation plus more small updates (#2552)
* i18n(pt-BR): Add `sst.mdx` translation plus more small updates

* Fix update

* Add more small updates

--- a/src/pages/pt-br/reference/publish-to-npm.mdx
+++ b/src/pages/pt-br/reference/publish-to-npm.mdx
@@ -263,7 +263,7 @@ Compartilhe o seu trabalho árduo adicionando sua integração a nossa [bibliote
 
 ### Dados do `package.json` 
 
-A biblioteca é automaticamente atualizada toda noite, puxando cada pacote publicado no NPM com a palavra-chave `astro-component`.
+A biblioteca é automaticamente atualizada toda noite, puxando cada pacote publicado no NPM com a palavra-chave `astro-component` ou `withastro`.
 
 A biblioteca de integrações lê os dados `name`, `description`, `repository` e `homepage` do seu `package.json`.
 
