Use aliases for component imports in MDX

--- a/src/content/docs/ja/guides/cms/images.mdx
+++ b/src/content/docs/ja/guides/cms/images.mdx
@@ -3,7 +3,7 @@ title: 画像
 description: Astroでの画像の取り扱いを学びます
 i18nReady: true
 ---
-import Since from '../../../components/Since.astro';
+import Since from '~/components/Since.astro';
 
 Astroは、プロジェクト内に保存されている画像やリモート上にリンクされている画像、CMSやCDNに保存されている画像をサイト上で表示するために様々な手段を提供しています。
 
