--- a/src/content/docs/zh-cn/core-concepts/sharing-state.mdx
+++ b/src/content/docs/zh-cn/core-concepts/sharing-state.mdx
@@ -2,7 +2,7 @@
 title: 状态共享
 i18nReady: false
 ---
-import Tabs from '../../../../components/tabs/Tabs'
+import Tabs from '~/components/tabs/Tabs'
 import UIFrameworkTabs from '~/components/tabs/UIFrameworkTabs.astro'
 import LoopingVideo from '~/components/LoopingVideo.astro'
 
