--- a/src/content/docs/zh-cn/reference/api-reference.mdx
+++ b/src/content/docs/zh-cn/reference/api-reference.mdx
@@ -1,7 +1,8 @@
 ---
 title: API 参考
 ---
-import Since from '~/components/Since.astro'; import Tabs from '../../../../components/tabs/Tabs';
+import Since from '~/components/Since.astro';
+import Tabs from '~/components/tabs/Tabs';
 
 
 ## `Astro`
