--- a/src/content/docs/en/reference/errors/invalid-component-args.mdx
+++ b/src/content/docs/en/reference/errors/invalid-component-args.mdx
@@ -8,7 +8,7 @@ title: Invalid component arguments.
 i18nReady: true
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
 ---
-import DontEditWarning from '../../../../components/DontEditWarning.astro'
+import DontEditWarning from '~/components/DontEditWarning.astro'
 
 <DontEditWarning />
 
