--- a/src/content/docs/ru/guides/markdown-content.mdx
+++ b/src/content/docs/ru/guides/markdown-content.mdx
@@ -3,7 +3,7 @@ title: Markdown & MDX
 description: 'Изучите, как создавать контент, используя Markdown или MDX с Astro'
 i18nReady: true
 ---
-import Tabs from '../../../../components/tabs/Tabs';
+import Tabs from '~/components/tabs/Tabs';
 
 
 
