--- a/src/content/docs/pl/getting-started.mdx
+++ b/src/content/docs/pl/getting-started.mdx
@@ -3,8 +3,8 @@ title: Wprowadzenie
 description: Podstawowy wstęp do Astro.
 i18nReady: true
 ---
-import Button from '../../components/Button.astro'
-import ContributorList from '../../components/ContributorList.astro'
+import Button from '~/components/Button.astro'
+import ContributorList from '~/components/ContributorList.astro'
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 :::tip[Astro w wersji 2 już jest!]
