i18n(pt-BR): Small translation updates (#2472)
* i18n(pt-BR): Small translation updates

* Update `testing.mdx` to most recent changes

* Update `server-side-rendering.mdx` translation

--- a/src/pages/pt-br/guides/server-side-rendering.mdx
+++ b/src/pages/pt-br/guides/server-side-rendering.mdx
@@ -100,13 +100,15 @@ Você também pode adicionar um adaptador manualmente instalando o pacote e atua
 
 O Astro continuará sendo um gerador de sites estáticos por padrão. Porém, quando você habilita um adaptador de renderização no lado do servidor, **todas as rotas no seu diretório pages se torna uma rota renderizada no servidor** e algumas novas funcionalidades são disponibilizadas a você.
 
-### Pré-renderização
+### Renderização Híbrida
 
-<Since v="2.0.0-beta.0" />
+<Since v="2.0.0" />
 
-Qualquer arquivo `.astro` dentro do diretório `pages/` pode optar pela pré-renderização ou comportamento padrão em tempo de build, ao incluir a seguinte linha.
+Para habilitar a **renderização híbrida**, qualquer [página](/pt-br/core-concepts/astro-pages/) ou [endpoint do servidor](/pt-br/core-concepts/endpoints/#endpoints-do-servidor-rotas-de-api) que suporta a exportação de variáveis (`.astro`, `.mdx`, `.ts`, or `.js`) pode optar pela pré-renderização. Esses arquivos serão estaticamente renderizados em tempo de build, similiar ao modo de [`output`](/pt-br/reference/configuration-reference/#output) estático padrão.
 
-```astro title="src/pages/index.astro" {2}
+Simplesmente adicione `export const prerender = true`:
+
+```astro title="src/pages/minhapagina.astro" {2}
 ---
 export const prerender = true;
 // ...
@@ -114,6 +116,24 @@ export const prerender = true;
 <html>
   <!-- Página aqui... -->
 </html>
+```
+
+```mdx title="src/pages/minhapagina.mdx" {5}
+---
+layout: '../layouts/markdown.astro'
+title: 'Minha página'
+---
+export const prerender = true;
+# Esta é minha página
+```
+
+```js title="src/pages/meuendpoint.js" {1}
+export const prerender = true;
+export async function get() {
+  return {
+    body: JSON.stringify({ message: `Este é meu endpoint` }),
+  };
+}
 ```
 
 ### `Astro.request.headers`
