Apply suggestions from code review
Co-authored-by: Dan Jutan <danjutan@gmail.com>
Co-authored-by: Sarah Rainsberger <sarah@rainsberger.ca>

--- a/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -29,11 +29,11 @@ When you rebuild your Nuxt site in Astro, you will notice some important differe
 
 - [Page Routing](/en/core-concepts/astro-pages/#file-based-routing): Nuxt uses `vue-router` for SPA routing, and `vue-meta` for managing `<head>`. In Astro, you will create separate HTML page routes and control your page `<head>` directly, or in a layout component.
 
-- [Content-focus](/en/concepts/why-astro/): Astro was designed primarily for content-focused sites. While Nuxt has the capability to do content-focused sites through `@nuxt/content`, it's primarily geared towards interactive websites. This differs from Astro, which has built-in capabilities for content page generation, but may be difficult to replicate interactive components such as dashboards within.
+- [Content-focus](/en/concepts/why-astro/): Astro was designed to excel at making content-focused sites. While Nuxt has the capability to do content-focused sites through `@nuxt/content`, an existing Nuxt app may be built for high client-side interactivity. Astro has built-in capabilities for working with your content, such as page generation, but it may be difficult to replicate items with complex shared state, such as dashboards, using `.astro` components.
 
 ## Convert your NuxtJS Project
 
-Each project migration will look different. But, there are some common steps you will probably need to get your new Astro site up and running.
+Each project migration will look different. But, there are some common steps you will need to get your new Astro site up and running.
 
 Even after following these instructions, you probably won't have your new Astro site exactly the way you want it yet. But, this page will get you started in the right direction.
 
@@ -90,7 +90,7 @@ You may find it useful to install some of [Astro's optional integrations](/en/gu
 
 ### Put your source code in `src`
 
-1. **Move** Nuxt's `static/` folder to `public/`. 
+1. **Move** the contents of Nuxt's `static/` folder into `public/`.
    
     Astro uses the `public/` directory for static assets, similar to Nuxt's `static/` folder.
 
@@ -103,7 +103,7 @@ You may find it useful to install some of [Astro's optional integrations](/en/gu
 
 Astro has a configuration file at the root of your project called [`astro.config.mjs`](/en/guides/configuring-astro/). This is used only for configuring your Astro project and any installed integrations, including [SSR adapters](/en/guides/deploy/).
 
-### Convert Vue SFC files to `.astro` files
+### Convert Vue SFC pages to `.astro` files
 
 Here are some tips for converting a Nuxt `.vue` component into a `.astro` component:
 
@@ -113,11 +113,11 @@ Here are some tips for converting a Nuxt `.vue` component into a `.astro` compon
 
 1. Move `<script>` JavaScript, into a "code fence" (`---`).
 
-4. Write an `Astro.props` statement to access any additional props that were previously passed to your Vue component.
+4. Use `Astro.props` to access any additional props that were previously passed to your Vue component.
 
 4. Decide whether any imported components also need to be converted to Astro. With the official integration installed, you can [use existing Vue components in your Astro file](/en/guides/integrations-guide/react/). But, you may want to convert them to Astro, especially if they do not need to be interactive!
 
-See [an example from a Nuxt app converted step-by-step](#examples-from-nuxtjs).
+See [an example from a Nuxt app converted step-by-step](#guided-examples-see-the-steps).
 
 #### Compare: Vue vs Astro
 
@@ -222,7 +222,7 @@ Note the standard HTML templating, and direct access to `<head>`:
 </html>
 ```
 
-You may also wish to reuse code from [your Nuxt's page's `head` property](https://nuxtjs.org/docs/configuration-glossary/configuration-head/#the-head-property) to include additional site meta data. Notice that Astro uses neither `vue-meta` nor a component's `head` property creates `<head>` directly. You may import and use components, even within `<head>`, to separate and organize your page content.
+You may also wish to reuse code from [your Nuxt's page's `head` property](https://nuxtjs.org/docs/configuration-glossary/configuration-head/#the-head-property) to include additional site meta data. Notice that Astro uses neither `vue-meta` nor a component's `head` property but instead creates `<head>` directly. You may import and use components, even within `<head>`, to separate and organize your page content.
 
 ### Migrating Pages and Posts
 
@@ -288,20 +288,17 @@ To interpolate a variable in an Astro component, change the set of two curly bra
 
 ### Nuxt Property Passing to Astro
 
+To bind an attribute or component property in an Astro component, change this syntax to the following:
 
-To bind a property to an attribute or component in Vue, you'd do the following:
-
-```vue title="components/Component.vue"
+```astro title="src/components/Component.astro" del={3-7} ins={9-11}
+---
+---
 <p v-bind:aria-label="message">...</p>
 <!-- Or -->
 <p :aria-label="message">...</p>
 <!-- Also support component props -->
 <Header title="Page"/>
-```
 
-To bind an attribute or component property in an Astro component, change this syntax to the following:
-
-```astro title="src/components/Component.astro"
 <p aria-label={message}>...</p>
 <!-- Also support component props -->
 <Header title={"Page"}/>
@@ -497,7 +494,7 @@ See more about [Styling in Astro](/en/guides/styling/).
 
 ### Nuxt Image Plugin to Astro
 
-Convert any [Nuxt `<nuxt-img/>` or `<nuxt-picture/>` components](https://image.nuxtjs.org/components/nuxt-img) with [Astro's own image integration components](/en/guides/images/#astros-image-integration), or with a standard HTML `<img>`. See a [full list of component attributes](/en/guides/integrations-guide/image/#usage) available for Astro's `<Image />` and `<Picture />` components, and note that several will differ from Nuxt's attributes. 
+Convert any [Nuxt `<nuxt-img/>` or `<nuxt-picture/>` components](https://image.nuxtjs.org/components/nuxt-img) to [Astro's own image integration components](/en/guides/images/#astros-image-integration), or with a standard HTML `<img>`. See a [full list of component attributes](/en/guides/integrations-guide/image/#usage) available for Astro's `<Image />` and `<Picture />` components, and note that several will differ from Nuxt's attributes. 
 
 ```astro title="src/pages/index.astro"
 ---
