--- a/src/pages/es/guides/troubleshooting.mdx
+++ b/src/pages/es/guides/troubleshooting.mdx
@@ -142,7 +142,7 @@ En Astro, usar una etiqueta `<head>` funciona de igual manera que cualquier otra
 
 ### An unexpected `<script>` or `<style>` is included
 
-Quizás observes que se importan las etiquetas `<script>` o `<style>` de un componente en tu código HTML incluso si dicho componente no aparece en el resultado final. Esto puede suceder, por ejemplo, cuando [componentes renderizados condicionalmente](/es/core-concepts/astro-components.mdx#html-din%C3%A1mico) no son mostrados. 
+Quizás observes que se importan las etiquetas `<script>` o `<style>` de un componente en tu código HTML incluso si dicho componente no aparece en el resultado final. Esto puede suceder, por ejemplo, cuando [componentes renderizados condicionalmente](/es/core-concepts/astro-components/#html-dinámico) no son mostrados. 
 
 El proceso de construcción de Astro funciona en el gráfico de módulos: una vez que un componente se incluye en la plantilla, se procesan, optimizan y empaquetan sus etiquetas `<script>` y `<style>`, ya sea que aparezcan en el resultado final o no. Esto no se aplica a los scripts cuando se aplica la directiva `is:inline`.
 
