Added more suggestions from code review

--- a/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -11,6 +11,8 @@ import FileTree from '~/components/FileTree.astro'
 
 Here are some key concepts and migration strategies to help you get started. Use the rest of our docs and our [Discord community](https://astro.build/chat) to keep going!
 
+> This guide is referring to [Nuxt 2](https://nuxtjs.org/), not the newer Nuxt 3. While some of the concepts are similar, Nuxt 3 is a newer version of the framework and may require different strategies for parts of your migration.
+
 ## Key Similarities between Nuxt and Astro
 
 Nuxt and Astro share some similarities that will help you migrate your project:
@@ -98,11 +100,6 @@ You may find it useful to install some of [Astro's optional integrations](/en/gu
 
     Like Nuxt, Astro's `src/pages/` folder is a special folder used for file-based routing. All other folders are optional, and you can organize the contents of your `src/` folder any way you like. Other common folders in Astro projects include `src/layouts/`, `src/components`, `src/styles`, `src/scripts`.
 
-
-### Repurpose config file
-
-Astro has a configuration file at the root of your project called [`astro.config.mjs`](/en/guides/configuring-astro/). This is used only for configuring your Astro project and any installed integrations, including [SSR adapters](/en/guides/deploy/).
-
 ### Convert Vue SFC pages to `.astro` files
 
 Here are some tips for converting a Nuxt `.vue` component into a `.astro` component:
@@ -111,11 +108,11 @@ Here are some tips for converting a Nuxt `.vue` component into a `.astro` compon
 
 2. Change any [Nuxt or Vue syntax to Astro](#convert-nuxtjs-syntax-to-astro) or to HTML web standards. This includes `<NextLink>`, `:class`, `{{variable}}`, and `v-if`, for example.
 
-1. Move `<script>` JavaScript, into a "code fence" (`---`).
+3. Move `<script>` JavaScript, into a "code fence" (`---`). Convert your component's data-fetching properties to server-side JavaScript - see [Nuxt data fetching to Astro](#nuxt-data-fetching-to-astro). 
 
 4. Use `Astro.props` to access any additional props that were previously passed to your Vue component.
 
-4. Decide whether any imported components also need to be converted to Astro. With the official integration installed, you can [use existing Vue components in your Astro file](/en/guides/integrations-guide/react/). But, you may want to convert them to Astro, especially if they do not need to be interactive!
+5. Decide whether any imported components also need to be converted to Astro. With the official integration installed, you can [use existing Vue components in your Astro file](/en/guides/integrations-guide/react/). But, you may want to convert them to Astro, especially if they do not need to be interactive!
 
 See [an example from a Nuxt app converted step-by-step](#guided-examples-see-the-steps).
 
@@ -274,15 +271,12 @@ See Astro's [testing guide](/en/guides/testing/) for more.
 
 ### Nuxt Variable Interpolation to Astro
 
-A Nuxt Vue component might have the following to display a variable within a paragraph tag:
-
-```vue title="components/Component.vue"
-<p>{{message}}</p>
-```
-
 To interpolate a variable in an Astro component, change the set of two curly braces to one set of curly braces:
 
-```astro title="src/components/Component.astro"
+```astro title="src/components/Component.astro" del={3} add={4}
+---
+---
+<p>{{message}}</p>
 <p>{message}</p>
 ```
 
