Add some more minor code suggestions

--- a/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -223,7 +223,7 @@ You may also wish to reuse code from [your Nuxt's page's `head` property](https:
 
 ### Migrating Pages and Posts
 
-In NuxtJS, your [pages](/en/core-concepts/pages/) live in `/pages`. In Astro, **all your page content must live within `src/`**.
+In NuxtJS, your [pages](/en/core-concepts/pages/) live in `/pages`. In Astro, **all your page's content must live within `src/pages` or `src/content`**.
 
 #### Vue Pages
 
@@ -500,7 +500,7 @@ import rocket from '../images/rocket.svg';
 <img src={rocket} alt="A rocketship in space.">
 ```
 
-In Vue (`.vue`) components, use standard JSX image syntax (`<img />`). Astro will not optimize these images, but you can install and use NPM packages for more flexibility.
+In Vue (`.vue`) components within your Astro app, use standard JSX image syntax (`<img />`). Astro will not optimize these images, but you can install and use NPM packages for more flexibility.
 
 You can learn more about [using images in Astro](/en/guides/images/) in the Images Guide.
 
