--- a/src/pages/zh-cn/reference/error-reference.mdx
+++ b/src/pages/zh-cn/reference/error-reference.mdx
@@ -5,47 +5,47 @@ i18nReady: false
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
 ---
 
-下面是一张完整的错误列表，包含了您在使用 Astro 时可能遇到的所有报错。如需其他帮助（包括常见问题），另请参阅我们的[故障排除指南](/en/guides/troubleshooting/)。
+下面是一张完整的错误列表，包含了您在使用 Astro 时可能遇到的所有报错。如需其他帮助（包括常见问题），另请参阅我们的[故障排除指南](/zh-cn/guides/troubleshooting/)。
 
-## Astro Errors
+## Astro 错误
 
 - [**StaticRedirectNotAvailable**](/zh-cn/reference/errors/static-redirect-not-available/) (E03001)<br/>`Astro.redirect` is not available in static mode.
 - [**ClientAddressNotAvailable**](/zh-cn/reference/errors/client-address-not-available/) (E03002)<br/>`Astro.clientAddress` is not available in current adapter.
 - [**StaticClientAddressNotAvailable**](/zh-cn/reference/errors/static-client-address-not-available/) (E03003)<br/>`Astro.clientAddress` is not available in static mode.
-- [**NoMatchingStaticPathFound**](/en/reference/errors/no-matching-static-path-found/) (E03004)<br/>No static path found for requested path.
-- [**OnlyResponseCanBeReturned**](/en/reference/errors/only-response-can-be-returned/) (E03005)<br/>Invalid type returned by Astro page.
-- [**MissingMediaQueryDirective**](/en/reference/errors/missing-media-query-directive/) (E03006)<br/>Missing value for `client:media` directive.
-- [**NoMatchingRenderer**](/en/reference/errors/no-matching-renderer/) (E03007)<br/>No matching renderer found.
-- [**NoClientEntrypoint**](/en/reference/errors/no-client-entrypoint/) (E03008)<br/>No client entrypoint specified in renderer.
-- [**NoClientOnlyHint**](/en/reference/errors/no-client-only-hint/) (E03009)<br/>Missing hint on `client:only` directive.
-- [**InvalidGetStaticPathParam**](/en/reference/errors/invalid-get-static-path-param/) (E03010)<br/>Invalid value returned by a `getStaticPaths` path.
-- [**InvalidGetStaticPathsReturn**](/en/reference/errors/invalid-get-static-paths-return/) (E03011)<br/>Invalid value returned by getStaticPaths.
-- [**GetStaticPathsRemovedRSSHelper**](/en/reference/errors/get-static-paths-removed-rsshelper/) (E03012)<br/>getStaticPaths RSS helper is not available anymore.
-- [**GetStaticPathsExpectedParams**](/en/reference/errors/get-static-paths-expected-params/) (E03013)<br/>Missing params property on `getStaticPaths` route.
-- [**GetStaticPathsInvalidRouteParam**](/en/reference/errors/get-static-paths-invalid-route-param/) (E03014)<br/>Invalid value for `getStaticPaths` route parameter.
-- [**GetStaticPathsRequired**](/en/reference/errors/get-static-paths-required/) (E03015)<br/>`getStaticPaths()` function required for dynamic routes.
-- [**ReservedSlotName**](/en/reference/errors/reserved-slot-name/) (E03016)<br/>Invalid slot name.
-- [**NoAdapterInstalled**](/en/reference/errors/no-adapter-installed/) (E03017)<br/>Cannot use Server-side Rendering without an adapter.
-- [**NoMatchingImport**](/en/reference/errors/no-matching-import/) (E03018)<br/>No import found for component.
-- [**InvalidPrerenderExport**](/en/reference/errors/invalid-prerender-export/) (E03019)<br/>Invalid prerender export.
-- [**InvalidComponentArgs**](/en/reference/errors/invalid-component-args/) (E03020)<br/>Invalid component arguments.
-- [**FailedToLoadModuleSSR**](/en/reference/errors/failed-to-load-module-ssr/) (E04001)<br/>Could not import file.
-- [**InvalidGlob**](/en/reference/errors/invalid-glob/) (E04002)<br/>Invalid glob pattern.
-## CSS Errors
+- [**NoMatchingStaticPathFound**](/zh-cn/reference/errors/no-matching-static-path-found/) (E03004)<br/>No static path found for requested path.
+- [**OnlyResponseCanBeReturned**](/zh-cn/reference/errors/only-response-can-be-returned/) (E03005)<br/>Invalid type returned by Astro page.
+- [**MissingMediaQueryDirective**](/zh-cn/reference/errors/missing-media-query-directive/) (E03006)<br/>Missing value for `client:media` directive.
+- [**NoMatchingRenderer**](/zh-cn/reference/errors/no-matching-renderer/) (E03007)<br/>No matching renderer found.
+- [**NoClientEntrypoint**](/zh-cn/reference/errors/no-client-entrypoint/) (E03008)<br/>No client entrypoint specified in renderer.
+- [**NoClientOnlyHint**](/zh-cn/reference/errors/no-client-only-hint/) (E03009)<br/>Missing hint on `client:only` directive.
+- [**InvalidGetStaticPathParam**](/zh-cn/reference/errors/invalid-get-static-path-param/) (E03010)<br/>Invalid value returned by a `getStaticPaths` path.
+- [**InvalidGetStaticPathsReturn**](/zh-cn/reference/errors/invalid-get-static-paths-return/) (E03011)<br/>Invalid value returned by getStaticPaths.
+- [**GetStaticPathsRemovedRSSHelper**](/zh-cn/reference/errors/get-static-paths-removed-rsshelper/) (E03012)<br/>getStaticPaths RSS helper is not available anymore.
+- [**GetStaticPathsExpectedParams**](/zh-cn/reference/errors/get-static-paths-expected-params/) (E03013)<br/>Missing params property on `getStaticPaths` route.
+- [**GetStaticPathsInvalidRouteParam**](/zh-cn/reference/errors/get-static-paths-invalid-route-param/) (E03014)<br/>Invalid value for `getStaticPaths` route parameter.
+- [**GetStaticPathsRequired**](/zh-cn/reference/errors/get-static-paths-required/) (E03015)<br/>`getStaticPaths()` function required for dynamic routes.
+- [**ReservedSlotName**](/zh-cn/reference/errors/reserved-slot-name/) (E03016)<br/>Invalid slot name.
+- [**NoAdapterInstalled**](/zh-cn/reference/errors/no-adapter-installed/) (E03017)<br/>Cannot use Server-side Rendering without an adapter.
+- [**NoMatchingImport**](/zh-cn/reference/errors/no-matching-import/) (E03018)<br/>No import found for component.
+- [**InvalidPrerenderExport**](/zh-cn/reference/errors/invalid-prerender-export/) (E03019)<br/>Invalid prerender export.
+- [**InvalidComponentArgs**](/zh-cn/reference/errors/invalid-component-args/) (E03020)<br/>Invalid component arguments.
+- [**FailedToLoadModuleSSR**](/zh-cn/reference/errors/failed-to-load-module-ssr/) (E04001)<br/>Could not import file.
+- [**InvalidGlob**](/zh-cn/reference/errors/invalid-glob/) (E04002)<br/>Invalid glob pattern.
+## CSS 错误
 
-- [**CSSSyntaxError**](/en/reference/errors/csssyntax-error/) (E05001)<br/>CSS Syntax Error.
-## Markdown Errors
+- [**CSSSyntaxError**](/zh-cn/reference/errors/csssyntax-error/) (E05001)<br/>CSS Syntax Error.
+## Markdown 错误
 
-- [**MarkdownFrontmatterParseError**](/en/reference/errors/markdown-frontmatter-parse-error/) (E06001)<br/>Failed to parse Markdown frontmatter.
-- [**InvalidFrontmatterInjectionError**](/en/reference/errors/invalid-frontmatter-injection-error/) (E06003)<br/>Invalid frontmatter injection.
-- [**MdxIntegrationMissingError**](/en/reference/errors/mdx-integration-missing-error/) (E06004)<br/>MDX integration missing.
-- [**ConfigNotFound**](/en/reference/errors/config-not-found/) (E07001)<br/>Specified configuration file not found.
-- [**ConfigLegacyKey**](/en/reference/errors/config-legacy-key/) (E07002)<br/>Legacy configuration detected.
-## CLI Errors
+- [**MarkdownFrontmatterParseError**](/zh-cn/reference/errors/markdown-frontmatter-parse-error/) (E06001)<br/>Failed to parse Markdown frontmatter.
+- [**InvalidFrontmatterInjectionError**](/zh-cn/reference/errors/invalid-frontmatter-injection-error/) (E06003)<br/>Invalid frontmatter injection.
+- [**MdxIntegrationMissingError**](/zh-cn/reference/errors/mdx-integration-missing-error/) (E06004)<br/>MDX integration missing.
+- [**ConfigNotFound**](/zh-cn/reference/errors/config-not-found/) (E07001)<br/>Specified configuration file not found.
+- [**ConfigLegacyKey**](/zh-cn/reference/errors/config-legacy-key/) (E07002)<br/>Legacy configuration detected.
+## CLI 错误
 
-- [**GenerateContentTypesError**](/en/reference/errors/generate-content-types-error/) (E08001)<br/>Failed to generate content types.
-## Content Collection Errors
+- [**GenerateContentTypesError**](/zh-cn/reference/errors/generate-content-types-error/) (E08001)<br/>Failed to generate content types.
+## 内容集合错误
 
-- [**InvalidContentEntryFrontmatterError**](/en/reference/errors/invalid-content-entry-frontmatter-error/) (E09001)<br/>Content entry frontmatter does not match schema.
-- [**InvalidContentEntrySlugError**](/en/reference/errors/invalid-content-entry-slug-error/) (E09002)<br/>Invalid content entry slug.
-- [**ContentSchemaContainsSlugError**](/en/reference/errors/content-schema-contains-slug-error/) (E09003)<br/>Content Schema should not contain `slug`.
+- [**InvalidContentEntryFrontmatterError**](/zh-cn/reference/errors/invalid-content-entry-frontmatter-error/) (E09001)<br/>Content entry frontmatter does not match schema.
+- [**InvalidContentEntrySlugError**](/zh-cn/reference/errors/invalid-content-entry-slug-error/) (E09002)<br/>Invalid content entry slug.
+- [**ContentSchemaContainsSlugError**](/zh-cn/reference/errors/content-schema-contains-slug-error/) (E09003)<br/>Content Schema should not contain `slug`.
