Sample for SSR deploy using docker

--- a/src/pages/en/guides/deploy.mdx
+++ b/src/pages/en/guides/deploy.mdx
@@ -83,3 +83,37 @@ Before deploying your Astro site with [SSR (server-side rendering)](/en/guides/s
 - [Added the adapter](/en/reference/configuration-reference/#integrations) to your `astro.config.mjs` file's import and default export when installing manually. (The `astro add` command will take care of this step for you!)
 :::
 
+## Standalone SSR using Docker
+
+### Sample astro.config.mjs
+```javascript
+import { defineConfig } from "astro/config";
+import react from "@astrojs/react";
+import tailwind from "@astrojs/tailwind";
+import node from "@astrojs/node";
+
+// https://astro.build/config
+export default defineConfig({
+  output: "server",
+  integrations: [react(), tailwind()], //optional integrations
+  adapter: node({
+    mode: "standalone",
+  }),
+  server: {
+    port: 3000,
+    host: "0.0.0.0",
+  },
+});
+```
+
+### Sample Dockerfile
+```
+FROM node:18-slim
+WORKDIR /app
+COPY ["package.json", "robots.txt","tailwind.config.cjs","astro.config.mjs", "tsconfig.json","./"]
+COPY public ./public
+COPY src ./src
+RUN npm install
+RUN npm run build
+CMD ["node", "./dist/server/entry.mjs"]
+```
