ci: update error reference docs

--- a/src/pages/en/reference/error-reference.mdx
+++ b/src/pages/en/reference/error-reference.mdx
@@ -38,6 +38,7 @@ The following reference is a complete list of the errors you may encounter while
 - [**NoMatchingImport**](/en/reference/errors/no-matching-import/) (E03018)<br/>No import found for component.
 - [**InvalidPrerenderExport**](/en/reference/errors/invalid-prerender-export/) (E03019)<br/>Invalid prerender export.
 - [**InvalidComponentArgs**](/en/reference/errors/invalid-component-args/) (E03020)<br/>Invalid component arguments.
+- [**PageNumberParamNotFound**](/en/reference/errors/page-number-param-not-found/) (E03021)<br/>Page number param not found.
 - [**FailedToLoadModuleSSR**](/en/reference/errors/failed-to-load-module-ssr/) (E04001)<br/>Could not import file.
 - [**InvalidGlob**](/en/reference/errors/invalid-glob/) (E04002)<br/>Invalid glob pattern.
 ## CSS Errors
