update recipes page

--- a/src/pages/en/guides/recipes.mdx
+++ b/src/pages/en/guides/recipes.mdx
@@ -12,15 +12,17 @@ See guided examples of adding features to your Astro project.
 
 ## Curated Recipes
 
+
+{/* Existing guide pages that are to be removed from sidebar and be accessible via recipes */}
+
+
 [Add an RSS feed](/en/guides/rss/)
 
+[Add custom fonts](/en/guides/fonts/)
+
+{/* Examples taken from other larger pages; new pages to be created */ }
+
 [eCommerce cart flyout](/en/core-concepts/sharing-state/)
-
-[Use fontsource](/en/guides/fonts/#using-fontsource)
-
-[Add fonts with Tailwind](/en/guides/fonts/#add-fonts-with-tailwind)
-
-[Add a local font](/en/guides/fonts/#example)
 
 [Verifying a Captcha](/en/core-concepts/endpoints/#example-verifying-a-captcha)
 
@@ -28,4 +30,8 @@ See guided examples of adding features to your Astro project.
 
 [Create a single layout for `.md`, `.mdx` and `.astro` files](/en/core-concepts/layouts/#using-one-layout-for-md-mdx-and-astro)
 
+[Convert an existing project to content collections](/en/guides/content-collections/#migrating-from-file-based-routing)
+
 ## Community Resources
+
+Add your own here!
