reverts fetching data example

--- a/src/pages/en/guides/cms/storyblok.mdx
+++ b/src/pages/en/guides/cms/storyblok.mdx
@@ -192,16 +192,17 @@ export default defineConfig({
 
 ### Fetching data
 
-To test the setup, create a new page in the `src/pages` directory named `index.astro` with the following content:
+To test the setup, in Storyblok create a new story with the `blogPost` content type named `test-post`.
+In Astro, create a new page in the `src/pages/` directory named `test-post.astro` with the following content:
 
-```astro title="pages/index.astro"
+```astro title="src/pages/test-post.astro"
 ---
 import { useStoryblokApi } from '@storyblok/astro'
 import StoryblokComponent from '@storyblok/astro/StoryblokComponent.astro'
 
 const storyblokApi = useStoryblokApi()
 
-const { data } = await storyblokApi.get("cdn/stories/home", {
+const { data } = await storyblokApi.get("cdn/stories/test-post", {
   version: import.meta.env.DEV ? "draft" : "published",
 });
 
