--- a/src/pages/en/guides/cms/storyblok.mdx
+++ b/src/pages/en/guides/cms/storyblok.mdx
@@ -394,7 +394,7 @@ To generate pages for all of your blog posts, create a `.astro` page that will c
 
 If you are using Astro's default static site generation, you will use [dynamic routes](/en/core-concepts/routing/#dynamic-routes) and the `getStaticPaths` function to generate your project pages.
 
-Create a new file in a `src/pages/blog` directory called `[...slug].astro` and add the following code:
+Create a new directory `src/pages/blog/` and add a new file called `[...slug].astro` with the following code:
 
 ```astro title="src/pages/blog/[...slug].astro"
 ---
