--- a/src/pages/en/guides/cms/storyblok.mdx
+++ b/src/pages/en/guides/cms/storyblok.mdx
@@ -444,6 +444,8 @@ This file will generate a page for each story, with the slug and content fetched
 
 If you’ve [opted into SSR mode](/en/guides/server-side-rendering/#enabling-ssr-in-your-project), you will use dynamic routes to fetch the page data from Storyblok.
 
+Create a new directory `src/pages/blog/` and add a new file called `[...slug].astro` with the following code:
+
 ```astro title="src/pages/blog/[...slug].astro"
 ---
 import { useStoryblokApi } from '@storyblok/astro'
