--- a/src/pages/en/reference/api-reference.mdx
+++ b/src/pages/en/reference/api-reference.mdx
@@ -200,7 +200,7 @@ Astro.response.headers.set('Set-Cookie', 'a=b; Path=/;');
 
 <Since v="1.4.0" />
 
-`Astro.cookies` contains utilities for reading and manipulating cookies in [Server-side Rendering](/en/guides/server-side-rendering/) mode.
+`Astro.cookies` contains utilities for reading and manipulating cookies in [server-side rendering](/en/guides/server-side-rendering/) mode.
 
 | Name           | Type                                              | Description                                        |
 | :------------- | :------------------------------------------------ | :------------------------------------------------- |
