--- a/src/pages/fr/guides/client-side-scripts.mdx
+++ b/src/pages/fr/guides/client-side-scripts.mdx
@@ -53,20 +53,20 @@ Pour éviter le regroupement de script, vous pouvez utiliser la directive `is:li
 L'ajout de `type="module"` ou de tout autre attribut que `src` à une balise `<script>` désactivera le comportement de regroupement par défaut d'Astro, en traitant la balise comme si elle avait une directive `is:inline`.
 :::
 
-📚 Consultez notre [directives reference](/fr/reference/directives-reference/#script--style-directives) pour plus d'information sur les directives disponible pour les balises `<script>`.
+📚 Consultez notre page [référence des directives](/fr/reference/directives-reference/#script--style-directives) pour plus d'informations sur les directives disponibles des balises `<script>`.
 
 ### Chargement de script
 
-Vous voudriez écrire vos scripts dans un fichier séparé `.js`/`.ts` ou avoir besoin de référencer un script externe sur un autre serveur. Vous pouvez le faire en les référençant dans l'attribut `src`d'une balise `<script>`.
+Vous voudriez écrire vos scripts dans un fichier séparé `.js`/`.ts` ou avoir besoin de référencer un script externe sur un autre serveur. Vous pouvez le faire en les référençant dans l'attribut `src` d'une balise `<script>`.
 
 ### Importer des scripts locaux
 
-**Quand l'utiliser:** Si vos script est dedans `src/`
+**Quand l'utiliser :** Si vos script est dedans `src/`
 
-Astro va construire, optimiser et ajouter ces scripts à la pages pour vous, en suivant ses [règles de regroupement de script](#regroupement-de-script)
+Astro va compiler, optimiser et ajouter ces scripts à la page pour vous, en suivant ses [règles de regroupement de script](#regroupement-de-script)
 
 ```astro title="src/components/LocalScripts.astro"
-<!-- chemin relatif vers script à `src/scripts/local.js` -->
+<!-- chemin relatif du script dans `src/scripts/local.js` -->
 <script src="../scripts/local.js"></script>
 
 <!-- fonctionne également pour les fichiers TypeScript locaux -->
@@ -74,24 +74,23 @@ Astro va construire, optimiser et ajouter ces scripts à la pages pour vous, en 
 ```
 #### Charger des scripts externes
 
-**Quand l'utiliser:** Si votre fichier JavaScript se trouve à l'intérieur de `public/` ou sur un CDN.
+**Quand l'utiliser :** Si votre fichier JavaScript se trouve à l'intérieur du dossier `public/` ou sur un CDN.
 
-Pour charger des scripts en dehors du dossier `src/` de votre projet, incluez la directive `is:inline`. Cette approche évite le traitement JavaScript, le regroupement et les optimisations qui sont fournis par Astro lorsque vous importez des scripts comme décrit ci-dessus.
+Pour charger des scripts en dehors du dossier `src/` de votre projet, incluez la directive `is:inline`. Cette approche permet d'éviter le traitement JavaScript, le regroupement et l'optimisations du JavaScript qui sont fournis par Astro lorsque vous importez des scripts comme décrit ci-dessus.
 
 ```astro title="src/components/ExternalScripts.astro" "is:inline"
-<!-- chemin absolu vers script à `src/scripts/local.js` -->
+<!-- chemin absolu du script à `public/my-script.js` -->
 <script is:inline src="/my-script.js"></script>
 
-<!-- full URL to a script on a remote server -->
 <!-- URL complète vers un script sur un serveur distant -->
 <script is:inline src="https://my-analytics.com/script.js"></script>
 ```
 
 ## Modèles communs de script
 
-### Gérer les évènements `onclick` et autres
+### Gérer le `onclick` et d'autres évènements
 
-Certains frameworks d'interface utilisent une syntaxe personnalisée pour la gestion d'événements comme `onClick={...}`  (React/Preact) ou `@click="..."` (Vue). Astro suit le HTML standard de plus près et n’utilise pas de syntaxe personnalisée pour les événements.
+Certains frameworks d'interface utilisent une syntaxe personnalisée pour la gestion d'événements comme `onClick={...}` (React/Preact) ou `@click="..."` (Vue). Astro suit le HTML standard de plus près et n’utilise pas de syntaxe personnalisée pour les évènements.
 
 Au lieu de cela, vous pouvez utiliser [`addEventListener`](https://developer.mozilla.org/fr/docs/Web/API/EventTarget/addEventListener) dans une balise `<script>` pour gérer les interactions utilisateur.
 
@@ -112,23 +111,23 @@ Au lieu de cela, vous pouvez utiliser [`addEventListener`](https://developer.moz
 ```
 
 :::note
-Si vous avez plusieurs composants `<AlertButton />` sur une page, Astro n'exécutera pas le script plusieurs fois. Les scripts son groupés et inclus seulement une fois par page. L'utilisation de `querySelectorAll` de s'assurer que ce script associe l'écoteur d'évènements à chaque bouton avec la classe `alert` trouvé sur la page.
+Si vous avez plusieurs composants `<AlertButton />` sur une page, Astro n'exécutera pas le script plusieurs fois. Les scripts sont groupés et inclus seulement une fois par page. L'utilisation de `querySelectorAll` de garantit que ce script attache l'écoteur d'évènement à chaque bouton de la classe `alert` trouvé sur la page.
 :::
 
-### Composants Web avec éléments personnalisés
+### Composants Web avec des éléments personnalisés
 
-Vous pouvez créer vos propres éléments HTML avec un comportement personnalisé en utilisant le standard Composants Web. La définition d'un [élément personnalisé](https://developer.mozilla.org/fr/docs/Web/Web_Components/Using_custom_elements) dans un composant `.astro` vous permet de créer des composants interactifs sans avoir besoin d'une bibliothèque de cadres d'interface utilisateur.
+Vous pouvez créer vos propres éléments HTML avec un comportement personnalisé en utilisant les composants web standards. La définition d'un [élément personnalisé](https://developer.mozilla.org/fr/docs/Web/Web_Components/Using_custom_elements) dans un composant `.astro` vous permet de créer des composants interactifs sans avoir besoin d'une bibliothèque de cadres d'interface utilisateur.
 
-Dans cet exemple, nous définissons un nouvel élément HTML `<astro-heart>` qui suit le nombre de fois que vous cliquez sur le bouton cœur et met à jour le `<span>` avec le dernier décompte.
+Dans cet exemple, nous définissons un nouvel élément HTML `<astro-heart>` qui suit le nombre de fois que vous cliquez sur le bouton cœur et met à jour le `<span>` avec le dernier compte.
 
 ```astro title="src/components/AstroHeart.astro"
-<!-- Enveloppez les éléments dans notre élément personnalisé "astro-heart" -->
+<!-- Enveloppez les éléments du composant dans notre élément personnalisé "astro-heart" -->
 <astro-heart>
   <button aria-label="Heart">💜</button> × <span>0</span>
 </astro-heart>
 
 <script>
-  // Define le comportement pour notre nouveau type d'élément HTML.
+  // Définir le comportement de notre nouveau type d'élément HTML.
   class AstroHeart extends HTMLElement {
     constructor() {
 			super();
@@ -137,7 +136,7 @@ Dans cet exemple, nous définissons un nouvel élément HTML `<astro-heart>` qui
       const heartButton = this.querySelector('button');
       const countSpan = this.querySelector('span');
 
-      // Chaque fois que le bouton est cliqué, met à jour le décompte.
+      // À chaque fois que le bouton est cliqué, on met à jour le compte.
 			heartButton.addEventListener('click', () => {
         count++;
         countSpan.textContent = count;
@@ -152,26 +151,26 @@ Dans cet exemple, nous définissons un nouvel élément HTML `<astro-heart>` qui
 
 Il y a deux avantages à utiliser un élément personnalisé ici:
 
-1. Au lieu de chercher dans toute la page en utilisant `document.querySelector()`, vous pouvez utiliser `this.querySelector()`, qui ne recherche que dans l'instance courante de l'élément personnalisé. Cela facilite le travail avec seulement les enfants d'une instance de composant à la fois.
+1. Au lieu de chercher dans toute la page en utilisant `document.querySelector()`, vous pouvez utiliser `this.querySelector()`, qui ne recherche que dans l'instance courante de l'élément personnalisé. Cela facilite le travail en ne travaillant seulement qu'avec les enfants d'une seule instance de composant à la fois.
 
 2. Bien qu'un script ne s'exécute qu'une seule fois, le navigateur exécutera la méthode `constructor()` de notre élément personnalisé chaque fois qu'il trouvera `<astro-heart>` sur la page. Cela signifie que vous pouvez écrire du code en toute sécurité pour un composant à la fois, même si vous avez l'intention d'utiliser ce composant plusieurs fois sur une page.
 
-Vous pouvez en savoir plus sur les éléments personnalisés dans [guide des composants Web réutilisables de web.dev](https://web.dev/custom-elements-v1/) et [Introduction aux composants personnalisés de MDN](https://developer.mozilla.org/fr/docs/Web/Web_Components/Using_custom_elements).
+Vous pouvez en savoir plus sur les éléments personnalisés dans le [guide des composants Web réutilisables de web.dev](https://web.dev/custom-elements-v1/) et dans l'[introduction aux composants personnalisés de MDN](https://developer.mozilla.org/fr/docs/Web/Web_Components/Using_custom_elements).
 
 ### Passer les variables frontmatter aux scripts
 
 Dans Astro components, le code dans [le frontmatter](/fr/core-concepts/astro-components/#le-script-du-composant) entre les clôtures “---” tourne sur le serveur et n'est pas disponible dans le navigateur. Pour envoyer des variables du serveur au client, nous avons besoin d'un moyen de stocker nos variables et de les lire lorsque JavaScript s'exécute dans le navigateur.
 
-Une façon de le faire est d'utiliser [attributs `data-*`](https://developer.mozilla.org/fr/docs/Learn/HTML/Howto/Use_data_attributes) pour stocker la valeur des variables dans votre sortie HTML. Les scripts, y compris les éléments personnalisés, peuvent alors lire ces attributs en utilisant la propriété `dataset` d'un élément une fois que votre HTML se charge dans le navigateur.
+Une façon de le faire est d'utiliser les [attributs `data-*`](https://developer.mozilla.org/fr/docs/Learn/HTML/Howto/Use_data_attributes) pour stocker la valeur des variables dans votre sortie HTML. Les scripts, y compris les éléments personnalisés, peuvent alors lire ces attributs en utilisant la propriété `dataset` d'un élément une fois que votre HTML se charge dans le navigateur.
 
-Dans cet exemple de composant, un prop `message` est stocké dans un attribut `data-message`, de sorte que l'élément personnalisé peut lire `this.dataset.message` et obtenir la valeur du prop dans le navigateur.
+Dans cet exemple de composant, une propriété `message` est stockée dans un attribut `data-message`, de sorte que l'élément personnalisé puisse lire `this.dataset.message` et obtenir la valeur de la propriété dans le navigateur.
 
 ```astro title="src/components/AstroGreet.astro" {2} /data-message={.+}/ "this.dataset.message"
 ---
 const { message = 'Welcome, world!' } = Astro.props;
 ---
 
-<!-- Stocker le prop de message comme attribut de données. -->
+<!-- Stocker le propriété de message comme attribut de données. -->
 <astro-greet data-message={message}>
   <button>Saluer!</button>
 </astro-greet>
@@ -181,7 +180,7 @@ const { message = 'Welcome, world!' } = Astro.props;
     constructor() {
 			super();
 
-      // Lisez le message de l’attribut data..
+      // Lisez le message de l’attribut data.
       const message = this.dataset.message;
       const button = this.querySelector('button');
       button.addEventListener('click', () => {
@@ -209,6 +208,6 @@ import AstroGreet from '../components/AstroGreet.astro';
 <AstroGreet message="Content que tu sois là! 👋" />
 ```
 
-:::tip[Saviez-vous?]
-C'est en fait ce que fait Astro dans les coulisses lorsque vous passez des accessoires à un composant écrit en utilisant un framework d'interface utilisateur comme React! Pour les composants avec une directive `client:*`, Astro crée un élément personnalisé `<astro-island>` avec un attribut `props` qui stocke vos props côté serveur dans la sortie HTML.
+:::tip[Le saviez-vous?]
+C'est en fait ce que fait Astro dans les coulisses lorsque vous passez des propriétés à un composant écrit en utilisant un framework d'interface utilisateur comme React ! Pour les composants avec une directive `client:*`, Astro crée un élément personnalisé `<astro-island>` avec un attribut `props` qui stocke vos props côté serveur dans la sortie HTML.
 :::
