--- a/src/pages/en/guides/data-fetching.mdx
+++ b/src/pages/en/guides/data-fetching.mdx
@@ -108,4 +108,4 @@ const weather = json.data;
 
 Astro components can fetch data from your favorite CMS and then render it as your page content. Using [dynamic routes](/en/core-concepts/routing/#dynamic-routes), components can even generate pages based on your CMS content.
 
-See our [CMS Guides](/en/guides/cms) for full details on integrating Astro with headless CMSes including Storyblok, Contentful, and WordPress.
+See our [CMS Guides](/en/guides/cms/) for full details on integrating Astro with headless CMSes including Storyblok, Contentful, and WordPress.
