--- a/src/pages/zh-cn/getting-started.mdx
+++ b/src/pages/zh-cn/getting-started.mdx
@@ -2,59 +2,69 @@
 layout: ~/layouts/MainLayout.astro
 title: 入门指南
 description: 简单介绍 Astro
+i18nReady: true
 ---
 import Button from '../../components/Button.astro'
 import ContributorList from '../../components/ContributorList.astro'
+import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
+
+:::tip[Astro v2 已经发布!]
+**Astro v2 有什么新功能？** [在公告的博客文章中找到答案](https://astro.build/blog/astro-2/)。  
+**准备好升级了吗？** [遵循我们的升级指南](/en/guides/upgrade-to/v2/)。
+:::
+
+<h2>Astro 是什么？</h2>
+
+Astro 是一个**一体式**的**web框架**，用于构建**快速**，**以内容为中心**的网站。
+
+## 主要特性
+
+- **Component Islands:** A new web architecture for building faster websites.
+- **Server-first API design:** Move expensive hydration off of your users' devices.
+- **Zero JS, by default:** No JavaScript runtime overhead to slow you down.
+- **Edge-ready:** Deploy anywhere, even a global edge runtime like Deno or Cloudflare.
+- **Customizable:** Tailwind, MDX, and 100+ other integrations to choose from.
+- **UI-agnostic:** Supports React, Preact, Svelte, Vue, Solid, Lit and more.
+
+Check out our detailed [Why Astro](/en/concepts/why-astro/) breakdown to learn more about what makes Astro special. ✨
 
 
+## 在你的浏览器尝试 Astro
 
-静态站点生成器 🚀 随意搭配框架 🚀 更少的 JavaScript
-
-## 试用 Astro
-
-无论是在浏览器中还是在本地你都可以很快地用上 Astro！
-
-### 在线 Playground
-
-最简单的“先试后买”方式就是打开 [astro.new](https://astro.new/)，从中挑选一个入门模板，然后就可以在浏览器中体验完全可用的 Astro 了！
-
-或者你也可以点击下方任一按钮，**快速启动基础入门项目**。
+打开 [astro.new](https://astro.new/)，从中挑选一个入门模板，然后就可以在浏览器中体验完全可用的 Astro 了！
 
 <div style="display: flex; flex-wrap: wrap; gap: 0.5rem;">
-    <Button href="https://astro.new/basics?on=codesandbox">Open in CodeSandbox</Button>
-    <Button href="https://astro.new/basics?on=stackblitz">Open in StackBlitz</Button>
+  <Button href="https://astro.new/basics?on=stackblitz">Launch basic template</Button>
+  <Button variant="outline" href="https://astro.new/">View all templates →</Button>
 </div>
 
-### 本地安装 Astro
+## 开始你的第一个项目
 
-准备好安装了吗？
+使用我们有用的 `create astro` CLI向导，在本地启动并运行一个新的 Astro 项目！
 
-简单跟随 `create-astro` CLI 指引，很快就能在本地启动并运行新项目!
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  # 使用 npm 创建新项目
+  npm create astro@latest
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  # 使用 pnpm 创建新项目
+  pnpm create astro@latest
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  # 使用 yarn 创建新项目
+  yarn create astro
+  ```
+  </Fragment>
+</PackageManagerTabs>
 
-```bash
-# 使用 npm 创建新项目
-npm create astro@latest
-# 或 yarn
-yarn create astro
-# 或 pnpm
-pnpm create astro@latest
-```
+我们的[安装指南](/zh-cn/install/auto/)提供了使用 CLI 向导安装 Astro 、从现有 Astro GitHub 存储库创建新项目以及手动安装 Astro 的完整的分步说明。
 
-⚙️ 我们的[安装指南](/zh-cn/install/auto/)有完整的、分步骤说明，无论你想用哪个软件包管理器安装 Astro。
-
-⚙️ 请参阅[手动设置](/zh-cn/install/manual/)的说明。
-
-## 开始搭建 Astro
-
-随意选择来丰富你的网站内容或功能！
-
-🏗️ 给你的站点添加新的 [Astro (.astro) 页面](/zh-cn/core-concepts/astro-pages/) 或是 [Markdown (.md) 页面](/zh-cn/guides/markdown-content/)。
-
-🏗️ 创建你的第一个[布局](/zh-cn/core-concepts/layouts/)。
-
-🏗️ 给你的站点添加额外的 [CSS 和样式](/zh-cn/guides/styling/)。
-
-…… 在**特性**下查看更多内容
 
 ## 学习 Astro
 
@@ -66,7 +76,7 @@ pnpm create astro@latest
 
 📚 探索 Astro 的[运行时 API](/zh-cn/reference/api-reference/)。
 
-…… 在**参考资料**下找到更多资料。
+*... 在**参考资料**下找到更多资料。*
 
 ## 扩展 Astro
 
@@ -76,7 +86,7 @@ pnpm create astro@latest
 
 🧰 通过访问我们的[网站展示](https://astro.build/showcase/)获得灵感。
 
-…… 参见我们的[集成使用指南](/zh-cn/guides/integrations-guide/)。
+*... 参见我们的[集成使用指南](/zh-cn/guides/integrations-guide/)*。
 
 ## 加入我们的社区
 
