applied suggestions pt 3

--- a/src/pages/fr/guides/client-side-scripts.mdx
+++ b/src/pages/fr/guides/client-side-scripts.mdx
@@ -7,7 +7,7 @@ layout: ~/layouts/MainLayout.astro
 i18nReady: true
 ---
 
-Vous pouvez ajouter de l'interactivité à vos composants Astro sans [utiliser un framework UI](/fr/core-concepts/framework-components/) comme React, Svelte, Vue, etc. en utilisant la balise HTML `<script>`. Cela vous permet d'exécuter votre JavaScript pour dans le navigateur et ajouter des fonctionnalités à vos composants Astro.
+Vous pouvez ajouter de l'interactivité à vos composants Astro sans [utiliser un framework UI](/fr/core-concepts/framework-components/) comme React, Svelte, Vue, etc. en utilisant la balise HTML `<script>`. Cela vous permet d'exécuter votre JavaScript dans le navigateur et ajouter des fonctionnalités à vos composants Astro.
 
 ## Utilisation du `<script>` en Astro.
 
@@ -16,33 +16,33 @@ Dans les fichiers `.astro`, vous pouvez ajouter du JavaScript côté client en a
 Dans cet example, l'ajout du composant `<Hello />` à un page enregistrera un message dans la console du navigateur.
 
 ```astro title="src/compnonents/Hello.astro"
-<h1>Bienvenue, monde!</h1>
+<h1>Bienvenue, monde !</h1>
 
 <script>
-  console.log('Bienvenue, console du navigateur!');
+  console.log('Bienvenue, console du navigateur !');
 </script>
 ```
 
 ### Regroupement de script
 
-Par défaut, les balises `<script>` sont processées par Astro.
+Par défaut, les balises `<script>` sont optimisées par Astro.
 
 - Toutes les importations seront regroupées, ce qui vous permettra d'importer des fichiers locaux ou des modules Node.
-- Le script traité sera injecté dans le `<head>` de votre page HTML avec [`type="module"`](https://developer.mozilla.org/fr/docs/Web/JavaScript/Guide/Modules).
+- Le script optimisé sera injecté dans le `<head>` de votre page HTML avec [`type="module"`](https://developer.mozilla.org/fr/docs/Web/JavaScript/Guide/Modules).
 - TypeScript est entièrement supporté, y compris l'importation de fichiers TypeScript.
 - Si votre composant est utilisé plusieurs fois sur un page, le script ne sera inclus qu'une seule fois.
 
 ```astro title="src/components/Example.astro"
 <script>
-  // Processé! Regroupé! TypeScript supporté!
+  // Optimisé ! Regroupé ! TypeScript supporté !
   // L'importation de fichiers locaux et de modules Node est supportée.
 <script>
 ```
 
-Pour éviter le regroupement de script, vous pouvez utiliser la directive `is:line`.
+Pour éviter le regroupement de script, vous pouvez utiliser la directive `is:inline`.
 
-``` astro title:"src/components/InlineScript.astro" "is:line"
-<script is:line>
+``` astro title:"src/components/InlineScript.astro" "is:inline"
+<script is:inline>
   // Sera rendu dans le HTML exactement comme écrit.
   // Les importations locales ne sont pas résolues et ne fonctionneront pas.
   // S'il se trouve dans un composant, il se répète chaque fois que le composant est utilisé.
@@ -95,7 +95,7 @@ Certains frameworks d'interface utilisent une syntaxe personnalisée pour la ges
 Au lieu de cela, vous pouvez utiliser [`addEventListener`](https://developer.mozilla.org/fr/docs/Web/API/EventTarget/addEventListener) dans une balise `<script>` pour gérer les interactions utilisateur.
 
 ```astro title="src/components/AlertButton.astro"
-<button class="alert">Cliquez-moi!</button>
+<button class="alert">Cliquez-moi !</button>
 
 <script>
   // Trouver tous les boutons avec la classe `alert` sur la page.
@@ -104,19 +104,19 @@ Au lieu de cela, vous pouvez utiliser [`addEventListener`](https://developer.moz
   // Gérer les clics sur chaque bouton.
   buttons.forEach((button) => {
     button.addEventListener('click', () => {
-      alert('Button was clicked!');
+      alert('Button was clicked !');
     });
   });
 </script>
 ```
 
 :::note
-Si vous avez plusieurs composants `<AlertButton />` sur une page, Astro n'exécutera pas le script plusieurs fois. Les scripts sont groupés et inclus seulement une fois par page. L'utilisation de `querySelectorAll` de garantit que ce script attache l'écoteur d'évènement à chaque bouton de la classe `alert` trouvé sur la page.
+Si vous avez plusieurs composants `<AlertButton />` sur une page, Astro n'exécutera pas le script plusieurs fois. Les scripts sont groupés et inclus seulement une fois par page. L'utilisation de `querySelectorAll` garantit que ce script attache l'écouteur d'évènement à chaque bouton ayant la classe `alert` trouvé sur la page.
 :::
 
 ### Composants Web avec des éléments personnalisés
 
-Vous pouvez créer vos propres éléments HTML avec un comportement personnalisé en utilisant les composants web standards. La définition d'un [élément personnalisé](https://developer.mozilla.org/fr/docs/Web/Web_Components/Using_custom_elements) dans un composant `.astro` vous permet de créer des composants interactifs sans avoir besoin d'une bibliothèque de cadres d'interface utilisateur.
+Vous pouvez créer vos propres éléments HTML ayant un comportement personnalisé en utilisant les composants web standards. Définir un [élément personnalisé](https://developer.mozilla.org/fr/docs/Web/Web_Components/Using_custom_elements) dans un composant `.astro` vous permet de créer des composants interactifs sans avoir besoin d'une bibliothèque de cadres d'interface utilisateur.
 
 Dans cet exemple, nous définissons un nouvel élément HTML `<astro-heart>` qui suit le nombre de fois que vous cliquez sur le bouton cœur et met à jour le `<span>` avec le dernier compte.
 
@@ -151,15 +151,15 @@ Dans cet exemple, nous définissons un nouvel élément HTML `<astro-heart>` qui
 
 Il y a deux avantages à utiliser un élément personnalisé ici:
 
-1. Au lieu de chercher dans toute la page en utilisant `document.querySelector()`, vous pouvez utiliser `this.querySelector()`, qui ne recherche que dans l'instance courante de l'élément personnalisé. Cela facilite le travail en ne travaillant seulement qu'avec les enfants d'une seule instance de composant à la fois.
+1. Au lieu de chercher dans toute la page en utilisant `document.querySelector()`, vous pouvez utiliser `this.querySelector()`, qui ne recherche que dans l'instance courante de l'élément personnalisé. Cela permet de travailler plus facilement avec les enfants d'une seule instance de composant à la fois.
 
-2. Bien qu'un script ne s'exécute qu'une seule fois, le navigateur exécutera la méthode `constructor()` de notre élément personnalisé chaque fois qu'il trouvera `<astro-heart>` sur la page. Cela signifie que vous pouvez écrire du code en toute sécurité pour un composant à la fois, même si vous avez l'intention d'utiliser ce composant plusieurs fois sur une page.
+2. Bien qu'un `<script>` ne s'exécute qu'une seule fois, le navigateur exécutera la méthode `constructor()` de notre élément personnalisé chaque fois qu'il trouvera `<astro-heart>` sur la page. Cela signifie que vous pouvez écrire du code en toute sécurité pour un composant à la fois, même si vous avez l'intention d'utiliser ce composant plusieurs fois sur une page.
 
 Vous pouvez en savoir plus sur les éléments personnalisés dans le [guide des composants Web réutilisables de web.dev](https://web.dev/custom-elements-v1/) et dans l'[introduction aux composants personnalisés de MDN](https://developer.mozilla.org/fr/docs/Web/Web_Components/Using_custom_elements).
 
 ### Passer les variables frontmatter aux scripts
 
-Dans Astro components, le code dans [le frontmatter](/fr/core-concepts/astro-components/#le-script-du-composant) entre les clôtures “---” tourne sur le serveur et n'est pas disponible dans le navigateur. Pour envoyer des variables du serveur au client, nous avons besoin d'un moyen de stocker nos variables et de les lire lorsque JavaScript s'exécute dans le navigateur.
+Dans les composants Astro, le code dans [le frontmatter](/fr/core-concepts/astro-components/#le-script-du-composant) entre les clôtures “---” s'éxecute sur le serveur et n'est pas disponible dans le navigateur. Pour envoyer des variables du serveur au client, nous avons besoin d'un moyen de stocker nos variables et de les lire lorsque le JavaScript s'exécute dans le navigateur.
 
 Une façon de le faire est d'utiliser les [attributs `data-*`](https://developer.mozilla.org/fr/docs/Learn/HTML/Howto/Use_data_attributes) pour stocker la valeur des variables dans votre sortie HTML. Les scripts, y compris les éléments personnalisés, peuvent alors lire ces attributs en utilisant la propriété `dataset` d'un élément une fois que votre HTML se charge dans le navigateur.
 
@@ -170,7 +170,7 @@ Dans cet exemple de composant, une propriété `message` est stockée dans un at
 const { message = 'Welcome, world!' } = Astro.props;
 ---
 
-<!-- Stocker le propriété de message comme attribut de données. -->
+<!-- Stocker la propriété de message comme attribut de données. -->
 <astro-greet data-message={message}>
   <button>Saluer!</button>
 </astro-greet>
@@ -204,8 +204,8 @@ import AstroGreet from '../components/AstroGreet.astro';
 <AstroGreet />
 
 <!-- Utiliser des messages personnalisés passés comme prop. -->
-<AstroGreet message="Belle journée pour construire des composants!" />
-<AstroGreet message="Content que tu sois là! 👋" />
+<AstroGreet message="Belle journée pour construire des composants !" />
+<AstroGreet message="Content que tu sois là ! 👋" />
 ```
 
 :::tip[Le saviez-vous?]
