--- a/src/pages/fr/guides/client-side-scripts.mdx
+++ b/src/pages/fr/guides/client-side-scripts.mdx
@@ -76,7 +76,7 @@ Astro va compiler, optimiser et ajouter ces scripts à la page pour vous, en sui
 
 **Quand l'utiliser :** Si votre fichier JavaScript se trouve à l'intérieur du dossier `public/` ou sur un CDN.
 
-Pour charger des scripts en dehors du dossier `src/` de votre projet, incluez la directive `is:inline`. Cette approche permet d'éviter le traitement JavaScript, le regroupement et l'optimisations du JavaScript qui sont fournis par Astro lorsque vous importez des scripts comme décrit ci-dessus.
+Pour charger des scripts en dehors du dossier `src/` de votre projet, incluez la directive `is:inline`. Cette approche permet d'éviter le traitement JavaScript, le regroupement et l'optimisation du JavaScript qui sont fournis par Astro lorsque vous importez des scripts comme décrit ci-dessus.
 
 ```astro title="src/components/ExternalScripts.astro" "is:inline"
 <!-- chemin absolu du script à `public/my-script.js` -->
