--- a/src/pages/en/guides/images.mdx
+++ b/src/pages/en/guides/images.mdx
@@ -17,7 +17,7 @@ The `src` attribute is required, and its format will depend on where your images
 
 ```astro title="src/pages/index.astro"
 ---
-import rocket from '../images/rocket.svg';
+import rocket from '../images/rocket.svg?url';
 ---
 <!-- Remote image on another server -->
 <img src="https://astro.build/assets/logo.png" width="25" alt="Astro">
@@ -57,7 +57,7 @@ Additionally, you can import and use images located in your project's `src/` dir
 
 ```mdx title="src/pages/post-1.mdx"
 
-import rocket from '../images/rocket.svg';
+import rocket from '../images/rocket.svg?url';
 
 # My MDX Page
 
@@ -93,7 +93,7 @@ Import them from a **relative file path** or [import alias](/en/guides/aliases/)
 // src/pages/index.astro
 
 // Access images in `src/images/`
-import logo from '../images/logo.png';
+import logo from '../images/logo.png?url';
 ---
 <img src={logo} width="40" alt="Astro" />
 ```
